# TamaTama

./: .gitignore  CMakeLists.txt  README.md  TamaTama.cpp  TamaTama.sln  TamaTama.vcxproj
.github/workflows/: ci.yml
Saves/: pet.save
include/: game.h  item.h  pet.h  shop.h  textureManager.h
src/: TamaTama.cpp
src/resources/: game.cpp  item.cpp  pet.cpp  shop.cpp  textureManager.cpp
